vcs/specs/parser/fail/async/invalid_select_arm_no_arrow.vr
// @test: parse-fail
// @level: L0
// @tags: parser, async, select, arm, arrow, error
// @description: Test select arm missing fat arrow
// @expected-error: E018

async fn test() {
    select {
        result = task.await result,
    }
}
